--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "indecision-app",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:gcangela/indecision-app.git",
+  "repository": "https://github.com/gcangela/expensify-app.gitß",
   "author": "Papadois",
   "license": "MIT",
   "scripts": {
